# genai-with-python-3.0

./: .gitignore  auto-cot-gemini.py  auto-cot-openai.py  cli-based-coding-agent.py  cot-gemini.py  cot-openai.py  few-shot-gemini.py  few-shot-openai.py  hello-gemini.py  hello-openai.py  pydantic-basic.py  pyproject.toml  readme.md  requirements.txt  structure-output-gemini.py  structure-output-openai.py  weather-agent-openai.py  zero-shot-gemini.py  zero-shot-openai.py
agents/: cli-based-coding-agent.py  image.py  langchain-tools.py  weather-agent-openai-method.py  weather-agent-openai.py  weather-audio-output-agent-openai.py  web_search_agent.py
langgraph/edges/: conditional-edge.py  mini-project-conditional-edge.py  parallel-edge-2.py  parallel-edge.py  serial-edge.py
rag/: index.py  parallel-query-retreive.py  retreive.py
